--- a/index.html
+++ b/index.html
@@ -12,9 +12,25 @@
         </button>
       </div>
       <div class="weather">
-              <img src="./images/images/rain.png" alt="" class="weather-icon"/>
-              <h1 class="temp">22°C</h1>
-              <h2 class="city">New York</h2>
+        <img src="./images/images/rain.png" alt="" class="weather-icon" />
+        <h1 class="temp">22°C</h1>
+        <h2 class="city">New York</h2>
+      </div>
+      <div class="details">
+        <div class="col">
+          <img src="images/images/humidity.png" alt="" />
+          <div class="para">
+            <p class="text">50%</p>
+            <p>Humidity</p>
+          </div>
+        </div>
+        <div class="col">
+          <img src="images/images/wind.png" alt="" />
+          <div class="para">
+            <p class="text">15 km/h</p>
+            <p>Wind Speed</p>
+          </div>
+        </div>
       </div>
     </div>
 
