--- a/index.html
+++ b/index.html
@@ -11,23 +11,25 @@
           <img src="./images/images/search.png" alt="" />
         </button>
       </div>
-      <div class="weather">
-        <img src="./images/images/rain.png" alt="" class="weather-icon" />
-        <h1 class="temp">22°C</h1>
-        <h2 class="city">New York</h2>
+      <div style="align-items: center;"><img  src="./images/images/rain.png" alt="" class="weather-icon"/></div>
+          
+      <div class="weather"> 
+       
+        <h1 class="temp" id="temp">22.56°c</h1>
+        <h2 class="city" id="city">New York</h2>
       </div>
       <div class="details">
         <div class="col">
           <img src="images/images/humidity.png" alt="" />
           <div class="para">
-            <p class="text">50%</p>
+            <p class="text1" id="hum">50%</p>
             <p>Humidity</p>
           </div>
         </div>
         <div class="col">
           <img src="images/images/wind.png" alt="" />
           <div class="para">
-            <p class="text">15 km/h</p>
+            <p class="text2" id="speed">15 km/h</p>
             <p>Wind Speed</p>
           </div>
         </div>
